Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18404

Receiving soft assert when checking out files in perforce

    XMLWordPrintable

Details

    • 667e622d5fd96cb1bb075ebd108fc99abd612ceb (qt-creator/qt-creator/master)

    Description

      With perforce properly configure when I start editing the file QT Creator will automatically check it out for me, but I get the following message: SOFT ASSERT: "c" in file /work/build/qt-creator/src/libs/utils/synchronousprocess.cpp, line 340

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-18404
        # Subject Branch Project Status CR V

        Activity

          People

            orgads Orgad Shaneh
            nistar Alex Vilensky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes