Perforce: Fix soft assertion

Fixes: QTCREATORBUG-18404
Change-Id: I274f8cbc4512c5142d54a3b4faf39747bfa16bd8
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>